# gpm-pcie-dashboard-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: build.yml  release.yml
src/: app.rs  handler.rs  main.rs  nvml_gpm.rs  tui.rs  ui.rs
